--- a/Views/KhenThuong/getKhenThuongCM.cshtml
+++ b/Views/KhenThuong/getKhenThuongCM.cshtml
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <br />
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-4">
                             <input type="file" id="inputFile" name="postedFile" class="form-control" value="" />
                         </div>
@@ -124,7 +124,7 @@
                         <div class="col-md-4">
                             <button class="btn btn-danger waves-effect waves-light" id="btnXuatExcel"><i class="fa fa-download"></i>File mẫu tham khảo</button>
                         </div>
-                    </div>
+                    </div>*@
                     <br />
                     <table id="table_KhenThuong" class="table table-striped table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%; ">
                         <thead>
@@ -261,7 +261,7 @@
                                                         <input type="hidden" id="selectedTreeTT" />
                                                     </div>
                                                     <div class="col-xl-7">
-                                                        <div class="row">
+                                                        @*<div class="row">
                                                             <div class="col-lg-10">
                                                                 <div class="form-group">
                                                                     <input type="text" id="txtTapTheSearch" name="txtTapTheSearch" class="form-control" placeholder="Tìm kiếm" />
@@ -272,7 +272,7 @@
                                                                     <button type="button" id="btnSearchTT" class="btn btn-primary waves-effect waves-light form-control"><i class="fas fa-search"></i></button>
                                                                 </div>
                                                             </div>
-                                                        </div>
+                                                        </div>*@
                                                         <br />
                                                         <div class="row">
                                                             <div class="col-lg-12">
@@ -335,7 +335,7 @@
                                                         <input type="hidden" id="selectedTreeCN" />
                                                     </div>
                                                     <div class="col-lg-8">
-                                                        <div class="row">
+                                                        @*<div class="row">
                                                             <div class="col-lg-10">
                                                                 <div class="form-group">
                                                                     <input type="text" id="txtCaNhanSearch" name="txtCaNhanSearch" class="form-control" placeholder="Tìm kiếm" />
@@ -346,7 +346,7 @@
                                                                     <button type="button" id="btnSearchCN" class="btn btn-primary waves-effect waves-light form-control"><i class="fas fa-search"></i></button>
                                                                 </div>
                                                             </div>
-                                                        </div>
+                                                        </div>*@
                                                         <br />
                                                         <div class="row">
                                                             <div class="col-lg-12">
@@ -573,7 +573,7 @@
                                         <input type="hidden" id="selectedTreeCN" />
                                     </div>
                                     <div class="col-lg-8">
-                                        <div class="row">
+                                        @*<div class="row">
                                             <div class="col-lg-10">
                                                 <div class="form-group">
                                                     <input type="text" id="txtCaNhanSearch" name="txtCaNhanSearch" class="form-control" placeholder="Tìm kiếm" />
@@ -584,7 +584,7 @@
                                                     <button type="button" id="btnSearchCN" class="btn btn-primary waves-effect waves-light form-control"><i class="fas fa-search"></i></button>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div>*@
                                         <br />
                                         <div class="row">
                                             <div class="col-lg-12">
@@ -666,7 +666,7 @@
                                         <input type="hidden" id="selectedTreeTT" />
                                     </div>
                                     <div class="col-xl-7">
-                                        <div class="row">
+                                        @*<div class="row">
                                             <div class="col-lg-10">
                                                 <div class="form-group">
                                                     <input type="text" id="txtTapTheSearch" name="txtTapTheSearch" class="form-control" placeholder="Tìm kiếm" />
@@ -677,7 +677,7 @@
                                                     <button type="button" id="btnSearchTT" class="btn btn-primary waves-effect waves-light form-control"><i class="fas fa-search"></i></button>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div>*@
                                         <br />
                                         <div class="row">
                                             <div class="col-lg-12">
