--- a/Views/Shared/Header.cshtml
+++ b/Views/Shared/Header.cshtml
@@ -108,7 +108,7 @@
                 <a href="/" class="logo text-center logo-light">
 
                     <span class="logo-lg" style="margin-top: 4px; margin-left: 3px; color: white; font-size: large; ">
-                        QUẢN LÝ THI ĐUA KHEN THƯỞNG
+                        THI ĐUA KHEN THƯỞNG VNPT QUẢNG BÌNH
                     </span>
                     <span class="logo-sm" style="margin-top: 4px; margin-left: 3px; color: white; font-size: large;">
                         TDKT
@@ -116,7 +116,7 @@
                 </a>
                 <a href="/" class="logo text-center logo-dark">
                     <span class="logo-lg" style="margin-top: 4px; margin-left: 3px; color: white; font-size: large;">
-                        QUẢN LÝ THI ĐUA KHEN THƯỞNG
+                        THI ĐUA KHEN THƯỞNG VNPT QUẢNG BÌNH
                     </span>
                     <span class="logo-sm" style="margin-top: 4px; margin-left: 3px; color: white; font-size: large;">
                         TDKT
