--- a/Views/ThiDua/BaoCaoThiDua.cshtml
+++ b/Views/ThiDua/BaoCaoThiDua.cshtml
@@ -326,7 +326,7 @@
                     $("#lblError").html("");
                     $("#txtTenThiDua").val(data.data.tenThiDua);
                     $("#txtSoHieu").val(data.data.soHieu);
-                    $("#txtNgayPhatDong").val(data.data.ngayPhatDong.split(" ")[0]);
+                    $("#txtNgayPhatDong").val(data.data.ngayPhatDong);
                     var dsDangKy = data.data.dsDangKy;
                     var htmlTapThe = '', htmlCaNhan = '';
                     var lsTT_spl = '', lsCN_spl = '';
