--- a/Views/DanhHieu/getDanhHieuCD.cshtml
+++ b/Views/DanhHieu/getDanhHieuCD.cshtml
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <br />
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-4">
                             <input type="file" id="inputFile" name="postedFile" class="form-control" />
                         </div>
@@ -117,7 +117,7 @@
                         <div class="col-md-4">
                             <button class="btn btn-danger waves-effect waves-light" id="btnXuatExcel"><i class="fa fa-download"></i>File mẫu tham khảo</button>
                         </div>
-                    </div>
+                    </div>*@
                     <br />
                     <table id="table_danhhieu" class="table table-striped table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%; ">
                         <thead>
@@ -239,7 +239,7 @@
                                                         <input type="hidden" id="selectedTreeTT" />
                                                     </div>
                                                     <div class="col-xl-7">
-                                                        <div class="row">
+                                                        @*<div class="row">
                                                             <div class="col-lg-10">
                                                                 <div class="form-group">
                                                                     <input type="text" id="txtTapTheSearch" name="txtTapTheSearch" class="form-control" placeholder="Tìm kiếm" />
@@ -250,7 +250,7 @@
                                                                     <button type="button" id="btnSearchTT" class="btn btn-primary waves-effect waves-light form-control"><i class="fas fa-search"></i></button>
                                                                 </div>
                                                             </div>
-                                                        </div>
+                                                        </div>*@
                                                         <br />
                                                         <div class="row">
                                                             <div class="col-lg-12">
@@ -312,7 +312,7 @@
                                                         <input type="hidden" id="selectedTreeCN" />
                                                     </div>
                                                     <div class="col-lg-8">
-                                                        <div class="row">
+                                                        @*<div class="row">
                                                             <div class="col-lg-10">
                                                                 <div class="form-group">
                                                                     <input type="text" id="txtCaNhanSearch" name="txtCaNhanSearch" class="form-control" placeholder="Tìm kiếm" />
@@ -323,7 +323,7 @@
                                                                     <button type="button" id="btnSearchCN" class="btn btn-primary waves-effect waves-light form-control"><i class="fas fa-search"></i></button>
                                                                 </div>
                                                             </div>
-                                                        </div>
+                                                        </div>*@
                                                         <br />
                                                         <div class="row">
                                                             <div class="col-lg-12">
@@ -733,9 +733,9 @@
                 {
                     "data": "id", "render": function (data, type, row, meta) {
                         if (row["daTraoTang"] == true) {
-                            return "<a class='fa fa-lg fa-eye' style='color: LimeGreen' href='#' data-toggle='tooltip' title='Xem danh hiệu' onclick='return xemDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-edit colorEdit' href='#' data-toggle='tooltip' title='Cập nhật' onclick='return editDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-flag' style='color: Gold' href='#' data-toggle='tooltip' title='Thêm hình ảnh' onclick='traoTangDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-times colorCommon' href='#' data-toggle='tooltip' title='Hủy trao tặng' onclick='huyTraoTangDanhHieu(" + data + ")'></a>";
+                            return "<a class='fa fa-lg fa-eye' style='color: LimeGreen' href='#' data-toggle='tooltip' title='Xem danh hiệu' onclick='return xemDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-edit colorEdit' href='#' data-toggle='tooltip' title='Cập nhật' onclick='return editDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-times colorCommon' href='#' data-toggle='tooltip' title='Hủy trao tặng' onclick='huyTraoTangDanhHieu(" + data + ")'></a>";
                         };
-                        return "<a class='fa fa-lg fa-eye' style='color: LimeGreen' href='#' data-toggle='tooltip' title='Xem' onclick='return xemDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-edit colorEdit' href='#' data-toggle='tooltip' title='Cập nhật' onclick='return editDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-flag' style='color: Gold' href='#' data-toggle='tooltip' title='Thêm hình ảnh' onclick='traoTangDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-trash' href='#' data-toggle='tooltip' title='Xóa' onclick='xoaDanhHieu(" + data + ")'></a>";
+                        return "<a class='fa fa-lg fa-eye' style='color: LimeGreen' href='#' data-toggle='tooltip' title='Xem' onclick='return xemDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-edit colorEdit' href='#' data-toggle='tooltip' title='Cập nhật' onclick='return editDanhHieu(" + data + ")'></a>&nbsp;<a class='fa fa-lg fa-trash' href='#' data-toggle='tooltip' title='Xóa' onclick='xoaDanhHieu(" + data + ")'></a>";
                     }
                 },
             ],
