--- a/Views/KhenThuong/getKhenThuongDDT.cshtml
+++ b/Views/KhenThuong/getKhenThuongDDT.cshtml
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <br />
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-4">
                             <input type="file" id="inputFile" name="postedFile" class="form-control" value="" />
                         </div>
@@ -124,7 +124,7 @@
                         <div class="col-md-4">
                             <button class="btn btn-danger waves-effect waves-light" id="btnXuatExcel"><i class="fa fa-download"></i>File mẫu tham khảo</button>
                         </div>
-                    </div>
+                    </div>*@
                     <br />
                     <table id="table_KhenThuong" class="table table-striped table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%; ">
                         <thead>
